fix cross relations between rooms and devices
